--- a/exercise/c-simple-types/Cargo.toml
+++ b/exercise/c-simple-types/Cargo.toml
@@ -5,3 +5,7 @@ authors = ["Nathan Stocks <nathan.stocks@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+
+[lib]
+name = "ding_lib"
+path = "src/lib.rs"
